--- a/ss4/exercise/build.gradle
+++ b/ss4/exercise/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '4.3.17.RELEASE'
     implementation group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
     implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '1.2'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.14.Final'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 }
 compileJava.options.encoding = 'UTF-8'
 tasks.withType(JavaCompile) {    options.encoding = 'UTF-8'}
